# Mimir

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
examples/: build.toml  build.yaml  main.c  utils.c
include/mimir/: cache.h  command_runner.h  dag.h  executor.h  parser.h  signature.h  target.h
src/: cache.cpp  command_runner.cpp  dag.cpp  executor.cpp  main.cpp  parser.cpp  signature.cpp  target.cpp
tests/: CMakeLists.txt  test_cache.cpp  test_command_runner.cpp  test_dag.cpp  test_executor.cpp  test_parser.cpp  test_signature.cpp  test_target.cpp
